“Changed Hello world with img and h2 to display simple logo. Image file added in the folder images and used as resource in the img element in index.html file”

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>Document</title>
 </head>
 <body>
-    Hello World
+    <div>
+        <img src="img/psj_logo.png" alt="logo psj" />
+        <h2>Puri Surya Jaya</h2>
+    </div>
 </body>
 </html>
