--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <img src="img/psj_logo.png" alt="logo psj" />
-        <h2>Puri Surya Jaya</h2>
+    <div id="logo-container">
+        <img id="logo-img" src="img/psj_logo.png" alt="logo psj" />
+        <h2 id="logo-img">Puri Surya Jaya</h2>
     </div>
 </body>
 </html>
