added new div as header container with id = header.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="header">Header</div>
     <div id="logo-container">
         <img id="logo-img" src="img/psj_logo.png" alt="logo psj" />
         <h2 id="logo-img">Puri Surya Jaya</h2>
