--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         <img id="logo-img" src="img/psj_logo.png" alt="logo psj" />
         <h2 id="logo-img">Puri Surya Jaya</h2>
     </div>
+    <div id="footer">Footer</div>
 </body>
 </html>
